--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
    <link rel="icon" href="static/images/favicon.ico" type="image/x-icon">
 </head>
 <body>
-	<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-transparent">
+	<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-white">
 		<div class="container">
 		    <a class="navbar-brand" href="#">
 		    	<img src="static/img/name_logo_white.png">
@@ -24,19 +24,16 @@
 		    <div class="collapse navbar-collapse" id="navbarSupportedContent">
 		      <ul class="navbar-nav ml-auto">
 		        <li class="nav-item">
-		          <a class="nav-link" href="#">HOME</a>
+		          <a class="nav-link" href="#">conócenos</a>
 		        </li>
 		        <li class="nav-item">
-		          <a class="nav-link" href="#">WHO WE ARE</a>
+		          <a class="nav-link" href="#">online store</a>
 		        </li>
 		        <li class="nav-item">
-		          <a class="nav-link" href="#">MINISTRY</a>
+		          <a class="nav-link" href="#">proyectos</a>
 		        </li>
 		        <li class="nav-item">
-		          <a class="nav-link" href="#">CALENDAR</a>
-		        </li>
-		        <li class="nav-item">
-		          <a class="nav-link" href="#">ONLINE GIVING</a>
+		          <a class="nav-link" href="#">hablemos</a>
 		        </li>
 		      </ul>
 		    </div>
@@ -44,130 +41,88 @@
 	</nav>
 	<header>
     <div class="header-caption container">
-      <div class="header-content fade-in">
-        <div class="header-title">Impulsando el<br>pensamiento disruptivo.</div>
-        <div class="header-subtitle">
-        	<br>
-        	<span>Bienvenido a Cpiensa. Hub Creativo y Red Internacional.</span>
-       	</div>
-    	<a class="btn" href="#">WATCH LIVE</a>
-      </div>
+    	<div class="row">
+    		<div class="col-xl">
+		      <div class="header-content fade-in">
+		        <div class="header-title">Impulsando el<br>pensamiento<br>disruptivo.</div>
+		        <div class="header-subtitle">Bienvenido a Cpi3nsa. Hub Creativo y Red Internacional.</div>
+		    	<a class="btn" href="#">Únete</a>
+		      </div>
+    		</div>
+    		<div class="col-xl">
+    			<img src="static/img/plan.svg">
+    		</div>
+    	</div>
     </div>
 	</header>
 	<main>
-		<section class="about container-sm">
-			<img src="static/img/bacon_logo.jpg">
-			<div class="content-title">A community where people feel challenged to live out who God created them to be.</div>
-			<div class="content-body">
-				We believe that the call of a Christian is to love Jesus and to love like Jesus. Our vision is to be an intergenerational community where people can feel love and accepted.<br><br>A community where people feel motivated to love like Jesus.
+		<section class="about container">
+			<div class="m-8">
+				<div class="content-title">Como Funciona</div>
+				<a href="#">——— Conoce más</a>
 			</div>
 			<div class="row">
-				<div class="col-sm-4">
-					<a class="btn btn-transparent" href="#">Our Beliefs</a>
+				<div class="col-md-3">
+					<div class="about-card about-card-down">
+						<img src="static/img/stars.svg">
+						<div class="about-card-body">
+							<div class="about-card-title">
+								Tanque de Pensamiento
+							</div>
+							<div class="about-card-text">
+								Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.
+							</div>
+						</div>
+					</div>
 				</div>
-				<div class="col-sm-4">
-					<a class="btn btn-transparent" href="#">Who We Are</a>
+				<div class="col-md-3">
+					<div class="about-card">
+						<img src="static/img/nature.svg">
+						<div class="about-card-body">
+							<div class="about-card-title">
+								Proyectos
+							</div>
+							<div class="about-card-text">
+								Contrary to popular belief, Lorem Ipsum is not simply random text, has roots in a piece.
+							</div>
+						</div>
+					</div>
 				</div>
-				<div class="col-sm-4">
-					<a class="btn btn-transparent" href="#">Leadership</a>
+				<div class="col-md-3">
+					<div class="about-card about-card-down">
+						<img src="static/img/world.svg">
+						<div class="about-card-body">
+							<div class="about-card-title">
+								Red de Cooperación Internacional
+							</div>
+							<div class="about-card-text">
+								Contrary to popular belief, Lorem Ipsum is not simply random text, has roots in a piece.
+							</div>
+						</div>
+					</div>
 				</div>
-			</div>
-		</section>
-		<section class="events">
-		<div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
-		  <ol class="carousel-indicators">
-		    <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-		    <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-		    <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-		  </ol>
-		  <div class="carousel-inner">
-		    <div class="carousel-item active">
-		      <img src="static/img/slider_1.jpg" class="d-block w-100" alt="...">
-		    </div>
-		    <div class="carousel-item">
-		      <img src="static/img/slider_2.jpg" class="d-block w-100" alt="...">
-		    </div>
-		    <div class="carousel-item">
-		      <img src="static/img/slider_3.jpg" class="d-block w-100" alt="...">
-		    </div>
-		  </div>
-		  <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
-		    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-		    <span class="sr-only">Previous</span>
-		  </a>
-		  <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
-		    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-		    <span class="sr-only">Next</span>
-		  </a>
-		</div>
-		</section>
-		<section class="announcements">
-			<div class="container-md">
-				<div class="header-title">Get Involved</div>
-				<div class="row">
-				  <div class="col-sm-6">
-				    <div class="card text-white shadow mosaics">
-				      <div class="card-body d-flex flex-column">
-				        <h5 class="card-title mt-auto">Mosaics</h5>
-				        <p class="card-text">We also have a group called the “Mosaics”, ranging from just out of high school and into the mid-20’s.  Their small group meets at 11am on Sundays.  Activities are planned with this age group specifically in mind.</p>
-				      </div>
-				    </div>
-				  </div>
-				  <div class="col-sm-6">
-				  	<div class="card text-white shadow hcdc">
-				  	  <div class="card-body d-flex flex-column">
-				  	    <h5 class="card-title mt-auto">HCDC</h5>
-				  	    <p class="card-text">Hickory Child Development Center (Daycare/Pre-K).</p>
-				  	  </div>
-				  	</div>
-				  </div>
-				</div>
-				<div class="row">
-				  <div class="col-sm-6">
-				    <div class="card text-white shadow sos">
-				      <div class="card-body d-flex flex-column">
-				        <h5 class="card-title mt-auto">SOS</h5>
-				        <p class="card-text">Led by Shirley Bodine & Margie Berry who organize 60+ lunches and also stays active with trips to area attractions and special programs at Sandy Cove.</p>
-				      </div>
-				    </div>
-				  </div>
-				  <div class="col-sm-6">
-				  	<div class="card text-white shadow calendar">
-				  	  <div class="card-body d-flex flex-column">
-				  	    <h5 class="card-title mt-auto">Calendar</h5>
-				  	    <p class="card-text">Here's a flyer that tells you what is happening during the week for small groups, teens, and children.</p>
-				  	  </div>
-				  	</div>
-				  </div>
+				<div class="col-md-3">
+					<div class="about-card">
+						<img src="static/img/tree.svg">
+						<div class="about-card-body">
+							<div class="about-card-title">
+								Algo Pendiente
+							</div>
+							<div class="about-card-text">
+								Contrary to popular belief, Lorem Ipsum is not simply random text, has roots in a piece.
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</section>
-		<section class="get-in-touch">
-			<div class="container-sm">
-				<div class="header-title">Contact Us</div>
-				<form>
-				  <div class="form-group">
-				    <label for="exampleInputEmail1">Name</label>
-				    <input type="email" class="form-control form-control-lg" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="">
-				  </div>
-				  <div class="form-group">
-				    <label for="exampleInputEmail1">Email</label>
-				    <input type="email" class="form-control form-control-lg" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="">
-				  </div>
-				  <div class="form-group">
-				    <label for="exampleInputPassword1">Subject</label>
-				    <input type="password" class="form-control form-control-lg" id="exampleInputPassword1" placeholder="">
-				  </div>
-				  <div class="form-group">
-				    <label for="exampleInputPassword1">Message</label>
-				    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-				  </div>
-				  <button type="submit" class="btn btn-transparent btn-white">Submit</button>
-				</form>
+		<section class="projects container mt-10">
+			<div class="mb-8">
+				<div class="content-title">Proyectos</div>
 			</div>
 		</section>
 	</main>
-	<footer class="footer bg-dark text-white pt-100 pb-100">
+	<footer class="footer text-white pt-100 pb-100">
 	  <div class="container">
 	    <div class="row">
 	      <div class="col-sm-4 footer-content">
