Add projects section

--- a/index.html
+++ b/index.html
@@ -120,28 +120,50 @@
 			<div class="mb-8">
 				<div class="content-title">Proyectos</div>
 			</div>
+			<div class="row">
+				<div class="col-lg-6">
+					<img src="static/img/plants.jpg" alt="">
+				</div>
+				<div class="col-lg-6">
+					<div class="content-title">MedeGreen Para Tí</div>
+					<div class="content-body">Contrary to popular belief, Lorem Ipsum is not simply random text, has roots in a piece. Contrary to popular belief, Lorem Ipsum is not simply random text, has roots in a piece.</div>
+					<a class="btn" href="#">Obtén tu Sello MedeGreen Gratis</a>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-lg-6">
+					<div class="content-title">BogotaGreen Para Tí</div>
+					<div class="content-body">Contrary to popular belief, Lorem Ipsum is not simply random text, has roots in a piece. Contrary to popular belief, Lorem Ipsum is not simply random text, has roots in a piece.</div>
+					<a class="btn" href="#">Obtén tu Sello BogotaGreen Gratis</a>
+				</div>
+				<div class="col-lg-6">
+					<img src="static/img/recycle.jpg" alt="">
+				</div>
+			</div>
+			<div class="projects-cta">
+				<a href="#">Conoce todos nuestros projectos</a>
+			</div>
 		</section>
 	</main>
 	<footer class="footer text-white pt-100 pb-100">
 	  <div class="container">
 	    <div class="row">
-	      <div class="col-sm-4 footer-content">
-	        <p class="copyright text-left">&copy; Bel Air Church of the Nazarene | All Rights Reserved</p>
-	      </div>
-	      <div class="col-sm-4 footer-content">
+	      <div class="col-sm-5 footer-content">
 	        <div class="footer-social-links">
 	          <a href="#"><i class="fab fa-facebook-f fa-2x"></i></a>
 	          <a href="#"><i class="fab fa-twitter fa-2x"></i></a>
 	          <a href="#"><i class="fab fa-instagram fa-2x"></i></a>
 	          <a href="#"><i class="fab fa-linkedin-in fa-2x"></i></a>
 	        </div>
+	        <!--<p class="copyright text-left">&copy; Cpi3nsa | All Rights Reserved</p> -->
 	      </div>
-	      <div class="col-sm-4 footer-content">
+	      <div class="col-sm-7 footer-content">
 	        <div>
-	          <a href="#">About</a> &nbsp;
-	          <a href="#">Services</a> &nbsp;
-	          <a href="#">Blog</a> &nbsp;
-	          <a href="#">Contact</a> &nbsp;
+	          <a href="#">conócenos</a> &nbsp;
+	          <a href="#">online store</a> &nbsp;
+	          <a href="#">proyectos</a> &nbsp;
+	          <a href="#">hablemos</a> &nbsp;
+	          <a href="#">términos y condiciones</a> &nbsp;
 	        </div>
 	      </div>
 	    </div>
