--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
    <!-- Custom CSS -->
    <link rel="stylesheet" type="text/css" href="static/css/style.css">
-   <link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700&display=swap" rel="stylesheet">
    <link rel="icon" href="static/images/favicon.ico" type="image/x-icon">
 </head>
 <body>
@@ -42,14 +42,14 @@
 	<header>
     <div class="header-caption container">
     	<div class="row">
-    		<div class="col-xl">
+    		<div class="col-lg">
 		      <div class="header-content fade-in">
 		        <div class="header-title">Impulsando el<br>pensamiento<br>disruptivo.</div>
 		        <div class="header-subtitle">Bienvenido a Cpi3nsa. Hub Creativo y Red Internacional.</div>
 		    	<a class="btn" href="#">Únete</a>
 		      </div>
     		</div>
-    		<div class="col-xl">
+    		<div class="col-lg no-mobile">
     			<img src="static/img/plan.svg">
     		</div>
     	</div>
@@ -57,12 +57,12 @@
 	</header>
 	<main>
 		<section class="about container">
-			<div class="m-8">
-				<div class="content-title">Como Funciona</div>
+			<div class="m-8 mb-5">
+				<div class="section-title">Como Funciona</div>
 				<a href="#">——— Conoce más</a>
 			</div>
 			<div class="row">
-				<div class="col-md-3">
+				<div class="col-lg-3">
 					<div class="about-card about-card-down">
 						<img src="static/img/stars.svg">
 						<div class="about-card-body">
@@ -75,7 +75,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-md-3">
+				<div class="col-lg-3">
 					<div class="about-card">
 						<img src="static/img/nature.svg">
 						<div class="about-card-body">
@@ -88,7 +88,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-md-3">
+				<div class="col-lg-3">
 					<div class="about-card about-card-down">
 						<img src="static/img/world.svg">
 						<div class="about-card-body">
@@ -101,7 +101,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-md-3">
+				<div class="col-lg-3">
 					<div class="about-card">
 						<img src="static/img/tree.svg">
 						<div class="about-card-body">
@@ -118,7 +118,7 @@
 		</section>
 		<section class="projects container mt-10">
 			<div class="mb-8">
-				<div class="content-title">Proyectos</div>
+				<div class="section-title">Proyectos</div>
 			</div>
 			<div class="row">
 				<div class="col-lg-6">
@@ -130,7 +130,7 @@
 					<a class="btn" href="#">Obtén tu Sello MedeGreen Gratis</a>
 				</div>
 			</div>
-			<div class="row">
+			<div class="row no-mobile">
 				<div class="col-lg-6">
 					<div class="content-title">BogotaGreen Para Tí</div>
 					<div class="content-body">Contrary to popular belief, Lorem Ipsum is not simply random text, has roots in a piece. Contrary to popular belief, Lorem Ipsum is not simply random text, has roots in a piece.</div>
@@ -138,6 +138,16 @@
 				</div>
 				<div class="col-lg-6">
 					<img src="static/img/recycle.jpg" alt="">
+				</div>
+			</div>
+			<div class="row mobile">
+				<div class="col-lg-6">
+					<img src="static/img/recycle.jpg" alt="">
+				</div>
+				<div class="col-lg-6">
+					<div class="content-title">BogotaGreen Para Tí</div>
+					<div class="content-body">Contrary to popular belief, Lorem Ipsum is not simply random text, has roots in a piece. Contrary to popular belief, Lorem Ipsum is not simply random text, has roots in a piece.</div>
+					<a class="btn" href="#">Obtén tu Sello BogotaGreen Gratis</a>
 				</div>
 			</div>
 			<div class="projects-cta">
