--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 		        <li class="nav-item">
 		          <a class="nav-link" href="#">conócenos</a>
 		        </li>
-		        <li class="nav-item">
+		        <!--<li class="nav-item">
 		          <a class="nav-link" href="#">online store</a>
-		        </li>
+		        </li>-->
 		        <li class="nav-item">
 		          <a class="nav-link" href="#">proyectos</a>
 		        </li>
@@ -44,8 +44,8 @@
     	<div class="row">
     		<div class="col-lg">
 		      <div class="header-content fade-in">
-		        <div class="header-title">Impulsando el<br>pensamiento<br>disruptivo.</div>
-		        <div class="header-subtitle">Bienvenido a Cpi3nsa. Hub Creativo y Red Internacional.</div>
+		        <div class="header-title">Impulsando el<br>pensamiento disruptivo.</div>
+		        <div class="header-subtitle">Bienvenido a Cpi3nsa.<br>Hub Creativo y Red Internacional.</div>
 		    	<a class="btn" href="#">Únete</a>
 		      </div>
     		</div>
@@ -64,13 +64,13 @@
 			<div class="row">
 				<div class="col-lg-3">
 					<div class="about-card about-card-down">
-						<img src="static/img/stars.svg">
+						<img src="static/img/tree.svg">
 						<div class="about-card-body">
 							<div class="about-card-title">
-								Tanque de Pensamiento
+								Soluciones Inteligentes de Cooperación (SIC)
 							</div>
 							<div class="about-card-text">
-								Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.
+								Contrary to popular belief, Lorem Ipsum is not simply random text, has roots in a piece.
 							</div>
 						</div>
 					</div>
@@ -103,13 +103,13 @@
 				</div>
 				<div class="col-lg-3">
 					<div class="about-card">
-						<img src="static/img/tree.svg">
+						<img src="static/img/stars.svg">
 						<div class="about-card-body">
 							<div class="about-card-title">
-								Algo Pendiente
+								Tanque de Pensamiento
 							</div>
 							<div class="about-card-text">
-								Contrary to popular belief, Lorem Ipsum is not simply random text, has roots in a piece.
+								Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.
 							</div>
 						</div>
 					</div>
@@ -170,7 +170,7 @@
 	      <div class="col-sm-7 footer-content">
 	        <div>
 	          <a href="#">conócenos</a> &nbsp;
-	          <a href="#">online store</a> &nbsp;
+	          <!--<a href="#">online store</a> &nbsp;-->
 	          <a href="#">proyectos</a> &nbsp;
 	          <a href="#">hablemos</a> &nbsp;
 	          <a href="#">términos y condiciones</a> &nbsp;
