--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 			<div class="row">
 				<div class="col-lg-3">
 					<div class="about-card about-card-down">
-						<img src="static/img/tree.svg">
+						<img src="static/img/growth.svg">
 						<div class="about-card-body">
 							<div class="about-card-title">
 								Soluciones Inteligentes de Cooperación (SIC)
@@ -90,10 +90,10 @@
 				</div>
 				<div class="col-lg-3">
 					<div class="about-card about-card-down">
-						<img src="static/img/world.svg">
+						<img src="static/img/connect.svg">
 						<div class="about-card-body">
 							<div class="about-card-title">
-								Red de Cooperación Internacional
+								Red de Cooperación Nacional e Internacional
 							</div>
 							<div class="about-card-text">
 								Contrary to popular belief, Lorem Ipsum is not simply random text, has roots in a piece.
