--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 	<main>
 		<section class="about container">
 			<div class="m-8 mb-5">
-				<div class="section-title">Como Funciona</div>
-				<a href="#">——— Conoce más</a>
+				<div class="section-title">Cómo Funciona?</div>
+				<a href="#">—— Conoce más</a>
 			</div>
 			<div class="row">
 				<div class="col-lg-3">
