--- a/index.html
+++ b/index.html
@@ -45,8 +45,10 @@
     		<div class="col-lg">
 		      <div class="header-content fade-in">
 		        <div class="header-title">Impulsando el<br>pensamiento disruptivo.</div>
-		        <div class="header-subtitle">Bienvenido a Cpi3nsa.<br>Hub Creativo y Red Internacional.</div>
-		    	<a class="btn" href="#">Únete</a>
+		        <div class="header-subtitle">
+		        	Transformamos negocios y territorios hacia la sostenibilidad y los preparamos para los retos que trae la nueva economía.
+		    	</div>
+		    	<a class="btn" href="#">Descubre qué podemos hacer por ti</a>
 		      </div>
     		</div>
     		<div class="col-lg no-mobile">
