--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 	<main>
 		<section class="about container">
 			<div class="m-8 mb-5">
-				<div class="section-title">Cómo Funciona?</div>
+				<div class="section-title">¿Cómo Funciona?</div>
 				<a href="#">—— Conoce más</a>
 			</div>
 			<div class="row">
@@ -158,10 +158,16 @@
 		</section>
 	</main>
 	<footer class="footer text-white pt-100 pb-100">
-	  <div class="container">
+	  <div class="mr-5 ml-5">
 	    <div class="row">
-	      <div class="col-sm-5 footer-content">
-	        <div class="footer-social-links">
+	      <div class="col-sm-4 footer-content text-center">
+	      	<div class="m-auto">
+		      	<p class="copyright m-0">Organización Cpi3nsa &reg; 2020</p>
+		      	<p style="font-size: 1rem" class="m-0">Todos los derechos reservados</p>
+	      	</div>
+	      </div>
+	      <div class="col-sm-4 footer-content text-center">
+	        <div class="footer-social-links m-auto">
 	          <a href="#"><i class="fab fa-facebook-f fa-2x"></i></a>
 	          <a href="#"><i class="fab fa-twitter fa-2x"></i></a>
 	          <a href="#"><i class="fab fa-instagram fa-2x"></i></a>
@@ -169,13 +175,13 @@
 	        </div>
 	        <!--<p class="copyright text-left">&copy; Cpi3nsa | All Rights Reserved</p> -->
 	      </div>
-	      <div class="col-sm-7 footer-content">
-	        <div>
-	          <a href="#">conócenos</a> &nbsp;
+	      <div class="col-sm-4 footer-content text-center">
+	        <div class="m-auto">
+	          <a href="#"> conócenos</a> &nbsp;
 	          <!--<a href="#">online store</a> &nbsp;-->
-	          <a href="#">proyectos</a> &nbsp;
-	          <a href="#">hablemos</a> &nbsp;
-	          <a href="#">términos y condiciones</a> &nbsp;
+	          <a href="#"> proyectos</a> &nbsp;
+	          <a href="#"> hablemos</a> &nbsp;
+	          <a href="#"> política de privacidad</a>
 	        </div>
 	      </div>
 	    </div>
