Add manifiesto page

--- a/proyectos.html
+++ b/proyectos.html
@@ -24,10 +24,10 @@
 		    <div class="collapse navbar-collapse" id="navbarSupportedContent">
 		      <ul class="navbar-nav ml-auto">
 		        <li class="nav-item">
-		          <a class="nav-link" href="/manifiesto.html">conócenos</a>
+		          <a class="nav-link active" href="/manifiesto.html">conócenos</a>
 		        </li>
 		        <li class="nav-item">
-		          <a class="nav-link" href="/proyectos.html">proyectos</a>
+		          <a class="nav-link" href="#">proyectos</a>
 		        </li>
 		        <!--<li class="nav-item">
 		          <a class="nav-link" href="#">online store</a>
@@ -39,88 +39,14 @@
 		    </div>
 		</div>
 	</nav>
-	<header>
-    <div class="header-caption container">
-    	<div class="row">
-    		<div class="col-lg">
-		      <div class="header-content fade-in">
-		        <div class="header-title">Impulsando el<br>pensamiento disruptivo.</div>
-		        <div class="header-subtitle">
-		        	Transformamos negocios y territorios hacia la sostenibilidad y los preparamos para los retos que trae la nueva economía.
-		    	</div>
-		    	<a class="btn" href="#">Descubre qué podemos hacer por ti</a>
-		      </div>
-    		</div>
-    		<div class="col-lg no-mobile">
-    			<img src="static/img/plan.svg">
-    		</div>
-    	</div>
-    </div>
-	</header>
-	<main>
-		<section class="about container">
-			<div class="m-8 mb-5">
-				<div class="section-title">¿Cómo Funciona?</div>
-				<a href="#">—— Conoce más</a>
-			</div>
-			<div class="row">
-				<div class="col-lg-3">
-					<div class="about-card about-card-down">
-						<img src="static/img/growth.svg">
-						<div class="about-card-body">
-							<div class="about-card-title">
-								Soluciones Inteligentes de Cooperación (SIC)
-							</div>
-							<div class="about-card-text">
-								Contrary to popular belief, Lorem Ipsum is not simply random text, has roots in a piece.
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-3">
-					<div class="about-card">
-						<img src="static/img/nature.svg">
-						<div class="about-card-body">
-							<div class="about-card-title">
-								Proyectos
-							</div>
-							<div class="about-card-text">
-								Contrary to popular belief, Lorem Ipsum is not simply random text, has roots in a piece.
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-3">
-					<div class="about-card about-card-down">
-						<img src="static/img/connect.svg">
-						<div class="about-card-body">
-							<div class="about-card-title">
-								Red de Cooperación Nacional e Internacional
-							</div>
-							<div class="about-card-text">
-								Contrary to popular belief, Lorem Ipsum is not simply random text, has roots in a piece.
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-3">
-					<div class="about-card">
-						<img src="static/img/stars.svg">
-						<div class="about-card-body">
-							<div class="about-card-title">
-								Tanque de Pensamiento
-							</div>
-							<div class="about-card-text">
-								Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-		<section class="projects container mt-10">
+	<header style="height: 10vh !important;"></header>
+	<main class="container">
+		<section class="projects mt-10">
 			<div class="mb-8">
 				<div class="section-title">Proyectos</div>
+				<div class="content-body text-justify">
+					Descubre los proyectos que estamos colocando en marcha el el 2020 - 2021.
+				</div>
 			</div>
 			<div class="row">
 				<div class="col-lg-6">
@@ -130,8 +56,11 @@
 					<div class="content-title">MedeGreen Para Tí</div>
 					<div class="content-body">
 						Conoce porqué esta marca ciudad será importante en la transformación de  Medellín hacia una ciudad consciente.
+						<br>
+						<br>
+						Meta: 2030
 					</div>
-					<a class="btn" href="/proyectos.html">Descubre más acerca de éste proyecto</a>
+					<a class="btn" href="#">¡Quiero aportar a este proyecto!</a>
 				</div>
 			</div>
 			<div class="row no-mobile">
@@ -140,8 +69,11 @@
 					<div class="content-body">
 						Conoce porqué esta marca ciudad será importante en la transformación de Bogotá hacia una capital 
 						consciente.
+						<br>
+						<br>
+						Meta: 2030
 					</div>
-					<a class="btn" href="/proyectos.html">Descubre más acerca de éste proyecto</a>
+					<a class="btn" href="#">¡Quiero aportar a este proyecto!</a>
 				</div>
 				<div class="col-lg-6">
 					<img src="static/img/recycle.jpg" alt="">
@@ -153,12 +85,53 @@
 				</div>
 				<div class="col-lg-6">
 					<div class="content-title">BogotaGreen Para Tí</div>
-					<div class="content-body">Contrary to popular belief, Lorem Ipsum is not simply random text, has roots in a piece. Contrary to popular belief, Lorem Ipsum is not simply random text, has roots in a piece.</div>
-					<a class="btn" href="#">Obtén tu Sello BogotaGreen Gratis</a>
+					<div class="content-body">
+						Conoce porqué esta marca ciudad será importante en la transformación de Bogotá hacia una capital 
+						consciente.
+						<br>
+						<br>
+						Meta: 2030
+					</div>
+					<a class="btn" href="#">¡Quiero aportar a este proyecto!</a>
 				</div>
 			</div>
-			<div class="projects-cta">
-				<a href="#">Conoce todos nuestros projectos</a>
+			<div class="row">
+				<div class="col-lg-6">
+					<img src="static/img/plants.jpg" alt="">
+				</div>
+				<div class="col-lg-6">
+					<div class="content-title">EcoShipping</div>
+					<div class="content-body">
+						Un nuevo modelo de negocio ecologico y conscinte para tus entrgas a domicilio.
+					</div>
+					<a class="btn" href="#">¡Quiero aportar a este proyecto!</a>
+				</div>
+			</div>
+			<div class="row no-mobile">
+				<div class="col-lg-6">
+					<div class="content-title">Cpi3nsa en Movimiento</div>
+					<div class="content-body">
+						Conoce porqué esta marca ciudad será importante en la transformación de Bogotá hacia una capital 
+						consciente.
+					</div>
+					<a class="btn" href="#">¡Quiero aportar a este proyecto!</a>
+				</div>
+				<div class="col-lg-6">
+					<img src="static/img/recycle.jpg" alt="">
+				</div>
+			</div>
+			<div class="row mobile">
+				<div class="col-lg-6">
+					<img src="static/img/recycle.jpg" alt="">
+				</div>
+				<div class="col-lg-6">
+					<div class="content-title">Cpi3nsa en Movimiento</div>
+					<div class="content-body">
+						Conoce porqué esta marca ciudad será importante en la transformación de Bogotá hacia una capital 
+						consciente.
+					</div>
+					<a class="btn" href="#">¡Quiero aportar a este proyecto!</a>
+				</div>
 			</div>
 		</section>
 	</main>
