--- a/manifiesto.html
+++ b/manifiesto.html
@@ -24,7 +24,7 @@
 		    <div class="collapse navbar-collapse" id="navbarSupportedContent">
 		      <ul class="navbar-nav ml-auto">
 		        <li class="nav-item">
-		          <a class="nav-link" href="/manifiesto.html">conócenos</a>
+		          <a class="nav-link active" href="#">conócenos</a>
 		        </li>
 		        <li class="nav-item">
 		          <a class="nav-link" href="/proyectos.html">proyectos</a>
@@ -39,126 +39,29 @@
 		    </div>
 		</div>
 	</nav>
-	<header>
-    <div class="header-caption container">
-    	<div class="row">
-    		<div class="col-lg">
-		      <div class="header-content fade-in">
-		        <div class="header-title">Impulsando el<br>pensamiento disruptivo.</div>
-		        <div class="header-subtitle">
-		        	Transformamos negocios y territorios hacia la sostenibilidad y los preparamos para los retos que trae la nueva economía.
-		    	</div>
-		    	<a class="btn" href="#">Descubre qué podemos hacer por ti</a>
-		      </div>
-    		</div>
-    		<div class="col-lg no-mobile">
-    			<img src="static/img/plan.svg">
-    		</div>
-    	</div>
-    </div>
-	</header>
-	<main>
-		<section class="about container">
-			<div class="m-8 mb-5">
-				<div class="section-title">¿Cómo Funciona?</div>
-				<a href="#">—— Conoce más</a>
+	<header style="height: 20vh !important;"></header>
+	<main class="container">
+		<section class="manifesto mb-5">
+			<div class="section-title text-left mb-4">
+				Un propósito más grande que nosotros. 
 			</div>
-			<div class="row">
-				<div class="col-lg-3">
-					<div class="about-card about-card-down">
-						<img src="static/img/growth.svg">
-						<div class="about-card-body">
-							<div class="about-card-title">
-								Soluciones Inteligentes de Cooperación (SIC)
-							</div>
-							<div class="about-card-text">
-								Contrary to popular belief, Lorem Ipsum is not simply random text, has roots in a piece.
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-3">
-					<div class="about-card">
-						<img src="static/img/nature.svg">
-						<div class="about-card-body">
-							<div class="about-card-title">
-								Proyectos
-							</div>
-							<div class="about-card-text">
-								Contrary to popular belief, Lorem Ipsum is not simply random text, has roots in a piece.
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-3">
-					<div class="about-card about-card-down">
-						<img src="static/img/connect.svg">
-						<div class="about-card-body">
-							<div class="about-card-title">
-								Red de Cooperación Nacional e Internacional
-							</div>
-							<div class="about-card-text">
-								Contrary to popular belief, Lorem Ipsum is not simply random text, has roots in a piece.
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-3">
-					<div class="about-card">
-						<img src="static/img/stars.svg">
-						<div class="about-card-body">
-							<div class="about-card-title">
-								Tanque de Pensamiento
-							</div>
-							<div class="about-card-text">
-								Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-		<section class="projects container mt-10">
-			<div class="mb-8">
-				<div class="section-title">Proyectos</div>
-			</div>
-			<div class="row">
-				<div class="col-lg-6">
-					<img src="static/img/plants.jpg" alt="">
-				</div>
-				<div class="col-lg-6">
-					<div class="content-title">MedeGreen Para Tí</div>
-					<div class="content-body">
-						Conoce porqué esta marca ciudad será importante en la transformación de  Medellín hacia una ciudad consciente.
-					</div>
-					<a class="btn" href="/proyectos.html">Descubre más acerca de éste proyecto</a>
-				</div>
-			</div>
-			<div class="row no-mobile">
-				<div class="col-lg-6">
-					<div class="content-title">BogotaGreen Para Tí</div>
-					<div class="content-body">
-						Conoce porqué esta marca ciudad será importante en la transformación de Bogotá hacia una capital 
-						consciente.
-					</div>
-					<a class="btn" href="/proyectos.html">Descubre más acerca de éste proyecto</a>
-				</div>
-				<div class="col-lg-6">
-					<img src="static/img/recycle.jpg" alt="">
-				</div>
-			</div>
-			<div class="row mobile">
-				<div class="col-lg-6">
-					<img src="static/img/recycle.jpg" alt="">
-				</div>
-				<div class="col-lg-6">
-					<div class="content-title">BogotaGreen Para Tí</div>
-					<div class="content-body">Contrary to popular belief, Lorem Ipsum is not simply random text, has roots in a piece. Contrary to popular belief, Lorem Ipsum is not simply random text, has roots in a piece.</div>
-					<a class="btn" href="#">Obtén tu Sello BogotaGreen Gratis</a>
-				</div>
-			</div>
-			<div class="projects-cta">
-				<a href="#">Conoce todos nuestros projectos</a>
+			<div class="content-body text-justify">
+				El mundo cambió. Y tú?
+				<br>
+				<br>
+				Esto es lo que sabemos con certeza: El futuro nos habla y nosotros estamos escuchando.
+				Somos y traemos innovación y desarrollo. Venimos transformando negocios, empresas y territorio hacia un futuro sostenible. Tenemos como objetivo llevar los negocios (tú negocio) hacia su máximo aprovechamiento y efectividad. De la mano tuya, de los gobiernos y empresas transformaremos nuestros territorios hacia las super ciudades del futuro.
+				<br>
+				<br>
+				Juntos, iniciemos nuevas conversaciones. Creemos nuevos modelos y nuevas formas de pensar.  Juntos podemos impulsar y conquistar el pensamiento disruptivo.
+				<br>
+				<br>
+				Es importante para nosotros atrevernos a pensar. A buscar romper cadenas y esclarecer el panorama. despertar. Ser autónomos y evolucionar. Para ello debemos llegar a todos los rincones del conocimiento. No podemos ser un mar de conocimiento con un centímetro de profundidad.
+				<br>
+				<br>
+				En nombre de una evolución consciente,
+				<br>
+				¿Qué dices si hacemos que esto suceda?
 			</div>
 		</section>
 	</main>
