--- a/manifiesto.html
+++ b/manifiesto.html
@@ -50,58 +50,70 @@
 				<br>
 				<br>
 				Esto es lo que sabemos con certeza: El futuro nos habla y nosotros estamos escuchando.
-				Somos y traemos innovación y desarrollo. Venimos transformando negocios, empresas y territorio hacia un futuro sostenible. Tenemos como objetivo llevar los negocios (tú negocio) hacia su máximo aprovechamiento y efectividad. De la mano tuya, de los gobiernos y empresas transformaremos nuestros territorios hacia las super ciudades del futuro.
+				<br>
+				Cpi3nsa surge como respuesta ante un mundo que dejó de creer en sus instituciones y que busca entre los sectores de la sociedad, realizar grandes transformaciones territoriales y de desarrollo. 
 				<br>
 				<br>
-				Juntos, iniciemos nuevas conversaciones. Creemos nuevos modelos y nuevas formas de pensar.  Juntos podemos impulsar y conquistar el pensamiento disruptivo.
+				<strong>Somos un imperativo organizacional basado  en la apropiación pública del conocimiento.</strong>
 				<br>
 				<br>
-				Es importante para nosotros atrevernos a pensar. A buscar romper cadenas y esclarecer el panorama. despertar. Ser autónomos y evolucionar. Para ello debemos llegar a todos los rincones del conocimiento. No podemos ser un mar de conocimiento con un centímetro de profundidad.
+				<strong>Desde Cpi3nsa, todas nuestras acciones se basan en: lo ecológico, educativo y empresarial.</strong>
 				<br>
 				<br>
-				En nombre de una evolución consciente,
+				Cpi3nsa trae innovación y desarrollo. Venimos transformando negocios, empresas y nuestro territorio colombiano hacia un futuro sostenible de prácticas conservativas y ecológicas, donde tenemos en cuenta el fundamento de llevar los negocios, tú negocio, hacia su máximo aprovechamiento y efectividad bajo el capitalismo consciente. Bajo nuestro modelo de integración y de la mano tuya, transformaremos, junto con los gobiernos y empresas, nuestros territorios hacia las super ciudades del futuro.
+				<br>
+				<br>
+				Creemos en un mundo que recicla, reduce, recupera y reutiliza. Creemos en una educación más consciente.
+				<br>
+				<br>
+				Juntos, queremos iniciar nuevas conversaciones. De tu mano, queremos crear nuevos modelos y nuevas formas de pensar.  Juntos podemos impulsar y conquistar el pensamiento disruptivo. Cuando el conocimiento se une no tiene quien lo pare y queremos comunicarlo a través del ejemplo. Es importante para nosotros atrevernos a pensar, a buscar romper cadenas y esclarecer el panorama, despertar. Ser autónomos y evolucionar. Para ello debemos llegar a todos los rincones del conocimiento.
+				<br>
+				<br>
+				En nombre de una evolución consciente, 
 				<br>
 				¿Qué dices si hacemos que esto suceda?
+				<br>
+				<br>
+				<strong>Cpi3nsa</strong>
 			</div>
 		</section>
 	</main>
 	<footer class="footer text-white pt-100 pb-100">
-	  <div class="mr-5 ml-5">
-	    <div class="row">
-	      <div class="col-md-4 footer-content text-center no-mobile">
-	      	<div class="m-auto">
-		      	<p class="copyright m-0" style="font-size: 1rem">Organización Cpi3nsa &reg; 2020</p>
-		      	<p style="font-size: 1rem" class="m-0">Todos los derechos reservados</p>
-	      	</div>
-	      </div>
-	      <div class="col-md-4 footer-content text-center">
-	        <div class="footer-social-links m-auto">
-	          <a href="#"><i class="fab fa-facebook-f"></i></a>
-	          <a href="#"><i class="fab fa-twitter"></i></a>
-	          <a href="#"><i class="fab fa-instagram"></i></a>
-	          <a href="#"><i class="fab fa-linkedin-in"></i></a>
-	        </div>
-	        <!--<p class="copyright text-left">&copy; Cpi3nsa | All Rights Reserved</p> -->
-	      </div>
-	      <div class="col-md-4 footer-content text-center" style="font-size: 10px; text-transform: uppercase;">
-	        <div class="m-auto">
-	          <a href="#"> conócenos</a>&nbsp; | &nbsp;
-	          <!--<a href="#">online store</a> &nbsp;-->
-	          <a href="#"> proyectos</a>&nbsp; | &nbsp;
-	          <a href="#"> hablemos</a>&nbsp; | &nbsp;
-	          <a href="#"> política de privacidad</a>
-	        </div>
-	      </div>
-	      <div class="col-md-4 footer-content text-center no-desktop">
-	      	<div class="m-auto" style="font-size: 14.6px;">
-	      		<br>
-	      		<br>
-		      	<p class="copyright m-0" style="font-size: 1.1rem">Organización Cpi3nsa &reg; 2020</p>
-		      	<p style="font-size: 1.1rem" class="m-0">Todos los derechos reservados</p>
-	      	</div>
-	      </div>
-	    </div>
-	  </div>
+		<div class="mr-5 ml-5">
+		  <div class="row">
+			<div class="col-md-4 footer-content text-center no-mobile">
+				<div class="m-auto">
+					<p class="copyright m-0" style="font-size: 1rem">Organización Cpi3nsa &reg; 2020</p>
+					<p style="font-size: 1rem" class="m-0">Todos los derechos reservados</p>
+				</div>
+			</div>
+			<div class="col-md-4 footer-content text-center">
+			  <div class="footer-social-links m-auto">
+				<a href="#"><i class="fab fa-facebook-f"></i></a>
+				<a href="#"><i class="fab fa-twitter"></i></a>
+				<a href="#"><i class="fab fa-instagram"></i></a>
+				<a href="#"><i class="fab fa-linkedin-in"></i></a>
+			  </div>
+			  <!--<p class="copyright text-left">&copy; Cpi3nsa | All Rights Reserved</p> -->
+			</div>
+			<div class="col-md-4 footer-content text-center" style="font-size: 10px; text-transform: uppercase;">
+			  <div class="m-auto">
+				<a href="#"> conócenos</a>&nbsp; | &nbsp;
+				<!--<a href="#">online store</a> &nbsp;-->
+				<a href="#"> proyectos</a>&nbsp; | &nbsp;
+				<a href="#"> política de privacidad</a>
+			  </div>
+			</div>
+			<div class="col-md-4 footer-content text-center no-desktop">
+				<div class="m-auto" style="font-size: 14.6px;">
+					<br>
+					<br>
+					<p class="copyright m-0" style="font-size: 1.1rem">Organización Cpi3nsa &reg; 2020</p>
+					<p style="font-size: 1.1rem" class="m-0">Todos los derechos reservados</p>
+				</div>
+			</div>
+		  </div>
+		</div>
 	</footer>
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
