--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 		        <div class="header-subtitle">
 		        	Transformamos negocios y territorios hacia la sostenibilidad y los preparamos para los retos que trae la nueva economía.
 		    	</div>
-		    	<a class="btn" href="#">Descubre qué podemos hacer por ti</a>
+		    	<a class="btn" href="#">Descubre qué podemos hacer por tí</a>
 		      </div>
     		</div>
     		<div class="col-lg no-mobile">
@@ -72,33 +72,7 @@
 								Soluciones Inteligentes de Cooperación (SIC)
 							</div>
 							<div class="about-card-text">
-								Contrary to popular belief, Lorem Ipsum is not simply random text, has roots in a piece.
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-3">
-					<div class="about-card">
-						<img src="static/img/nature.svg">
-						<div class="about-card-body">
-							<div class="about-card-title">
-								Proyectos
-							</div>
-							<div class="about-card-text">
-								Contrary to popular belief, Lorem Ipsum is not simply random text, has roots in a piece.
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-3">
-					<div class="about-card about-card-down">
-						<img src="static/img/connect.svg">
-						<div class="about-card-body">
-							<div class="about-card-title">
-								Red de Cooperación Nacional e Internacional
-							</div>
-							<div class="about-card-text">
-								Contrary to popular belief, Lorem Ipsum is not simply random text, has roots in a piece.
+								Diseñadas estratégicamente para transformar tu negocio.
 							</div>
 						</div>
 					</div>
@@ -111,7 +85,33 @@
 								Tanque de Pensamiento
 							</div>
 							<div class="about-card-text">
-								Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.
+								Ponemos a funcionar nuestro tanque para dar con soluciones a tus dolores de cabeza.
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-3">
+					<div class="about-card about-card-down">
+						<img src="static/img/connect.svg">
+						<div class="about-card-body">
+							<div class="about-card-title">
+								Red de Cooperación Nacional e Internacional
+							</div>
+							<div class="about-card-text">
+								Un imperativo organizacional de instituciones, alcaldías, organizaciones multilaterales, actores, grupos de interés y personas nacionales e internacionales basados  en la apropiación pública del conocimiento.
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-3">
+					<div class="about-card">
+						<img src="static/img/nature.svg">
+						<div class="about-card-body">
+							<div class="about-card-title">
+								Ciudades Conscientes
+							</div>
+							<div class="about-card-text">
+								Conoce nuestros modelos de negocio a poner en marcha para  el 2020 - 2021.
 							</div>
 						</div>
 					</div>
@@ -158,7 +158,7 @@
 				</div>
 			</div>
 			<div class="projects-cta">
-				<a href="#">Conoce todos nuestros projectos</a>
+				<a href="#">Visita más proyectos</a>
 			</div>
 		</section>
 	</main>
@@ -185,7 +185,6 @@
 	          <a href="#"> conócenos</a>&nbsp; | &nbsp;
 	          <!--<a href="#">online store</a> &nbsp;-->
 	          <a href="#"> proyectos</a>&nbsp; | &nbsp;
-	          <a href="#"> hablemos</a>&nbsp; | &nbsp;
 	          <a href="#"> política de privacidad</a>
 	        </div>
 	      </div>
