--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 		        <li class="nav-item">
 		          <a class="nav-link" href="/proyectos.html">proyectos</a>
 		        </li>
-		        <!--<li class="nav-item">
-		          <a class="nav-link" href="#">online store</a>
-		        </li>-->
+		        <li class="nav-item">
+		          <a class="nav-link" href="/tiends.html">tienda virtual</a>
+		        </li>
 		        <li class="nav-item">
 		          <a class="nav-link" href="/contacto.html">hablemos</a>
 		        </li>
@@ -60,8 +60,11 @@
 	<main>
 		<section class="about container">
 			<div class="m-8 mb-5">
-				<div class="section-title">¿Cómo Funciona?</div>
-				<a href="#">—— Conoce más</a>
+				<div class="section-title"
+					style="opacity: 0.8; font-weight: 400;">
+					¿Cómo Funciona?
+				</div>
+				<a href="#">— Conoce más</a>
 			</div>
 			<div class="row">
 				<div class="col-lg-3">
@@ -85,7 +88,7 @@
 								Tanque de Pensamiento
 							</div>
 							<div class="about-card-text">
-								Ponemos a funcionar nuestro tanque para dar con soluciones a tus dolores de cabeza.
+								Ponemos a funcionar nuestro tanque para dar soluciones a tus dolores de cabeza.
 							</div>
 						</div>
 					</div>
@@ -98,7 +101,7 @@
 								Red de Cooperación Nacional e Internacional
 							</div>
 							<div class="about-card-text">
-								Un imperativo organizacional de instituciones, alcaldías, organizaciones multilaterales, actores, grupos de interés y personas nacionales e internacionales basados  en la apropiación pública del conocimiento.
+								Un imperativo organizacional de instituciones, alcaldías, organizaciones multilaterales, actores, grupos de interés y personas basados  en la apropiación pública del conocimiento.
 							</div>
 						</div>
 					</div>
@@ -108,7 +111,7 @@
 						<img src="static/img/nature.svg">
 						<div class="about-card-body">
 							<div class="about-card-title">
-								Ciudades Conscientes
+								Proyectos
 							</div>
 							<div class="about-card-text">
 								Conoce nuestros modelos de negocio a poner en marcha para  el 2020 - 2021.
@@ -119,15 +122,25 @@
 			</div>
 		</section>
 		<section class="projects container mt-10">
-			<div class="mb-8">
-				<div class="section-title">Proyectos</div>
+			<div class="row mb-0">
+				<div class="col-lg-6">
+					<div class="mb-8">
+						<div class="section-title"
+							style="opacity: 0.8; font-weight: 400;">
+							Ciudades Conscientes
+						</div>
+					</div>
+				</div>
 			</div>
 			<div class="row">
 				<div class="col-lg-6">
-					<img src="static/img/plants.jpg" alt="">
+					<img src="static/img/medellin.jpeg" alt="">
 				</div>
 				<div class="col-lg-6">
-					<div class="content-title">MedeGreen Para Tí</div>
+					<div class="content-title"
+						style="opacity: 0.5; font-weight: 400;">
+						MedeGreen Para Tí
+				</div>
 					<div class="content-body">
 						Conoce porqué esta marca ciudad será importante en la transformación de  Medellín hacia una ciudad consciente.
 					</div>
@@ -136,7 +149,10 @@
 			</div>
 			<div class="row no-mobile">
 				<div class="col-lg-6">
-					<div class="content-title">BogotaGreen Para Tí</div>
+					<div class="content-title"
+						style="opacity: 0.5; font-weight: 400;">
+						BogotaGreen Para Tí
+					</div>
 					<div class="content-body">
 						Conoce porqué esta marca ciudad será importante en la transformación de Bogotá hacia una capital 
 						consciente.
@@ -144,15 +160,18 @@
 					<a class="btn" href="/proyectos.html">Descubre más acerca de éste proyecto</a>
 				</div>
 				<div class="col-lg-6">
-					<img src="static/img/recycle.jpg" alt="">
+					<img src="static/img/bogota.jpg" alt="">
 				</div>
 			</div>
 			<div class="row mobile">
 				<div class="col-lg-6">
-					<img src="static/img/recycle.jpg" alt="">
+					<img src="static/img/bogota.jpg" alt="">
 				</div>
 				<div class="col-lg-6">
-					<div class="content-title">BogotaGreen Para Tí</div>
+					<div class="content-title"
+						style="opacity: 0.5; font-weight: 400;">
+					BogotaGreen Para Tí
+					</div>
 					<div class="content-body">Contrary to popular belief, Lorem Ipsum is not simply random text, has roots in a piece. Contrary to popular belief, Lorem Ipsum is not simply random text, has roots in a piece.</div>
 					<a class="btn" href="#">Obtén tu Sello BogotaGreen Gratis</a>
 				</div>
@@ -185,7 +204,7 @@
 	          <a href="#"> conócenos</a>&nbsp; | &nbsp;
 	          <!--<a href="#">online store</a> &nbsp;-->
 	          <a href="#"> proyectos</a>&nbsp; | &nbsp;
-	          <a href="#"> política de privacidad</a>
+	          <a href="/static/docs/privacy_policy.pdf"> política de privacidad</a>
 	        </div>
 	      </div>
 	      <div class="col-md-4 footer-content text-center no-desktop">
