--- a/manifiesto.html
+++ b/manifiesto.html
@@ -54,10 +54,14 @@
 				Cpi3nsa surge como respuesta ante un mundo que dejó de creer en sus instituciones y que busca entre los sectores de la sociedad, realizar grandes transformaciones territoriales y de desarrollo. 
 				<br>
 				<br>
-				<strong>Somos un imperativo organizacional basado  en la apropiación pública del conocimiento.</strong>
+				<div class="w-100 text-center">
+					<strong class="text-center">Somos un imperativo organizacional basado  en la apropiación pública del conocimiento.</strong>
+				</div>
 				<br>
 				<br>
-				<strong>Desde Cpi3nsa, todas nuestras acciones se basan en: lo ecológico, educativo y empresarial.</strong>
+				<div class="w-100 text-center mb-0">
+					<strong class="text-center mb-0">Desde Cpi3nsa, todas nuestras acciones se basan en: lo ecológico, educativo y empresarial.</strong>
+				</div>
 				<br>
 				<br>
 				Cpi3nsa trae innovación y desarrollo. Venimos transformando negocios, empresas y nuestro territorio colombiano hacia un futuro sostenible de prácticas conservativas y ecológicas, donde tenemos en cuenta el fundamento de llevar los negocios, tú negocio, hacia su máximo aprovechamiento y efectividad bajo el capitalismo consciente. Bajo nuestro modelo de integración y de la mano tuya, transformaremos, junto con los gobiernos y empresas, nuestros territorios hacia las super ciudades del futuro.
