--- a/index.html
+++ b/index.html
@@ -46,9 +46,8 @@
 		      <div class="header-content fade-in">
 		        <div class="header-title">Impulsando el<br>pensamiento disruptivo.</div>
 		        <div class="header-subtitle">
-		        	Transformamos negocios y territorios hacia la sostenibilidad y los preparamos para los retos que trae la nueva economía.
+		        	Transformamos negocios y territorios hacia el futuro y la sostenibilidad.
 		    	</div>
-		    	<a class="btn" href="#">Descubre qué podemos hacer por tí</a>
 		      </div>
     		</div>
     		<div class="col-lg no-mobile">
@@ -58,6 +57,27 @@
     </div>
 	</header>
 	<main>
+		<section class="mb-8">
+			<div class="header-caption container">
+				<div class="row">
+					<div class="col-lg pl-5 pr-5">
+						<img src="static/img/think_thank.jpeg">
+					</div>
+					<div class="col-lg pl-5 pr-5">
+						<div class="header-content fade-in ml-4">
+							<div class="section-title"
+								style="opacity: 0.8; font-weight: 400;">
+								¡Pensamos por tí!
+							</div>
+							<div class="header-subtitle">
+								Un tanque de pensamiento que da vida a la<br>solución que necesitas.
+							</div>
+							<a class="btn" href="#">Descubre YA qué podemos hacer por tí</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
 		<section class="about container">
 			<div class="m-8 mb-5">
 				<div class="section-title"
@@ -136,10 +156,10 @@
 				<div class="col-lg-6">
 					<img src="static/img/medellin.jpeg" alt="">
 				</div>
-				<div class="col-lg-6">
+				<div class="col-lg-6 m-auto">
 					<div class="content-title"
 						style="opacity: 0.5; font-weight: 400;">
-						MedeGreen Para Tí
+						MedeGreen Para Tí.
 				</div>
 					<div class="content-body">
 						Conoce porqué esta marca ciudad será importante en la transformación de  Medellín hacia una ciudad consciente.
@@ -148,10 +168,10 @@
 				</div>
 			</div>
 			<div class="row no-mobile">
-				<div class="col-lg-6">
+				<div class="col-lg-6 m-auto">
 					<div class="content-title"
 						style="opacity: 0.5; font-weight: 400;">
-						BogotaGreen Para Tí
+						BogotaGreen Para Tí.
 					</div>
 					<div class="content-body">
 						Conoce porqué esta marca ciudad será importante en la transformación de Bogotá hacia una capital 
@@ -167,17 +187,14 @@
 				<div class="col-lg-6">
 					<img src="static/img/bogota.jpg" alt="">
 				</div>
-				<div class="col-lg-6">
+				<div class="col-lg-6 m-auto">
 					<div class="content-title"
 						style="opacity: 0.5; font-weight: 400;">
-					BogotaGreen Para Tí
+					BogotaGreen Para Tí.
 					</div>
 					<div class="content-body">Contrary to popular belief, Lorem Ipsum is not simply random text, has roots in a piece. Contrary to popular belief, Lorem Ipsum is not simply random text, has roots in a piece.</div>
 					<a class="btn" href="#">Obtén tu Sello BogotaGreen Gratis</a>
 				</div>
-			</div>
-			<div class="projects-cta">
-				<a href="#">Visita más proyectos</a>
 			</div>
 		</section>
 	</main>
@@ -201,9 +218,9 @@
 	      </div>
 	      <div class="col-md-4 footer-content text-center" style="font-size: 10px; text-transform: uppercase;">
 	        <div class="m-auto">
-	          <a href="#"> conócenos</a>&nbsp; | &nbsp;
+	          <a href="/manifiesto.html"> conócenos</a>&nbsp; | &nbsp;
 	          <!--<a href="#">online store</a> &nbsp;-->
-	          <a href="#"> proyectos</a>&nbsp; | &nbsp;
+	          <a href="/proyectos.html"> proyectos</a>&nbsp; | &nbsp;
 	          <a href="/static/docs/privacy_policy.pdf"> política de privacidad</a>
 	        </div>
 	      </div>
