--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
 		<section class="mb-8">
 			<div class="header-caption container">
 				<div class="row">
-					<div class="col-lg pl-5 pr-5">
+					<div class="col-lg-6 pl-5 pr-5">
 						<img src="static/img/think_thank.jpeg">
 					</div>
-					<div class="col-lg pl-5 pr-5">
+					<div class="col-lg-6 pl-5 pr-5">
 						<div class="header-content fade-in ml-4">
 							<div class="section-title"
 								style="opacity: 0.8; font-weight: 400;">
@@ -195,6 +195,10 @@
 					<div class="content-body">Contrary to popular belief, Lorem Ipsum is not simply random text, has roots in a piece. Contrary to popular belief, Lorem Ipsum is not simply random text, has roots in a piece.</div>
 					<a class="btn" href="#">Obtén tu Sello BogotaGreen Gratis</a>
 				</div>
+			</div>
+			<div class="projects-cta">
+				<a href="#">Conoce todos nuestros projectos</a>
+				<a href="#">Visita más proyectos</a>
 			</div>
 		</section>
 	</main>
