--- a/proyectos.html
+++ b/proyectos.html
@@ -43,17 +43,23 @@
 	<main class="container">
 		<section class="projects mt-10">
 			<div class="mb-8">
-				<div class="section-title">Proyectos</div>
+				<div class="section-title"
+					style="opacity: 0.8; font-weight: 400;">
+					Proyectos
+				</div>
 				<div class="content-body text-justify">
 					Descubre los proyectos que estamos colocando en marcha el el 2020 - 2021.
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-lg-6">
-					<img src="static/img/plants.jpg" alt="">
+					<img src="static/img/medellin.jpeg" alt="">
 				</div>
-				<div class="col-lg-6">
-					<div class="content-title">MedeGreen Para Tí</div>
+				<div class="col-lg-6 m-auto">
+					<div class="content-title"
+						style="opacity: 0.5; font-weight: 400;">
+						MedeGreen Para Tí
+					</div>
 					<div class="content-body">
 						Conoce porqué esta marca ciudad será importante en la transformación de  Medellín hacia una ciudad consciente.
 						<br>
@@ -64,8 +70,11 @@
 				</div>
 			</div>
 			<div class="row no-mobile">
-				<div class="col-lg-6">
-					<div class="content-title">BogotaGreen Para Tí</div>
+				<div class="col-lg-6 m-auto">
+					<div class="content-title"
+						style="opacity: 0.5; font-weight: 400;">
+						BogotaGreen Para Tí
+					</div>
 					<div class="content-body">
 						Conoce porqué esta marca ciudad será importante en la transformación de Bogotá hacia una capital 
 						consciente.
@@ -76,15 +85,18 @@
 					<a class="btn" href="#">¡Quiero aportar a este proyecto!</a>
 				</div>
 				<div class="col-lg-6">
-					<img src="static/img/recycle.jpg" alt="">
+					<img src="static/img/bogota.jpg" alt="">
 				</div>
 			</div>
 			<div class="row mobile">
 				<div class="col-lg-6">
-					<img src="static/img/recycle.jpg" alt="">
+					<img src="static/img/bogota.jpg" alt="">
 				</div>
-				<div class="col-lg-6">
-					<div class="content-title">BogotaGreen Para Tí</div>
+				<div class="col-lg-6 m-auto">
+					<div class="content-title"
+						style="opacity: 0.5; font-weight: 400;">
+						BogotaGreen Para Tí
+					</div>
 					<div class="content-body">
 						Conoce porqué esta marca ciudad será importante en la transformación de Bogotá hacia una capital 
 						consciente.
@@ -99,8 +111,11 @@
 				<div class="col-lg-6">
 					<img src="static/img/plants.jpg" alt="">
 				</div>
-				<div class="col-lg-6">
-					<div class="content-title">EcoShipping</div>
+				<div class="col-lg-6 m-auto">
+					<div class="content-title"
+						style="opacity: 0.5; font-weight: 400;">
+						EcoShipping
+					</div>
 					<div class="content-body">
 						Un nuevo modelo de negocio ecologico y conscinte para tus entrgas a domicilio.
 					</div>
@@ -108,8 +123,11 @@
 				</div>
 			</div>
 			<div class="row no-mobile">
-				<div class="col-lg-6">
-					<div class="content-title">Cpi3nsa en Movimiento</div>
+				<div class="col-lg-6 m-auto">
+					<div class="content-title"
+						style="opacity: 0.5; font-weight: 400;">
+						Cpi3nsa en Movimiento
+					</div>
 					<div class="content-body">
 						Conoce porqué esta marca ciudad será importante en la transformación de Bogotá hacia una capital 
 						consciente.
@@ -117,15 +135,18 @@
 					<a class="btn" href="#">¡Quiero aportar a este proyecto!</a>
 				</div>
 				<div class="col-lg-6">
-					<img src="static/img/recycle.jpg" alt="">
+					<img src="static/img/think_thank.jpeg" alt="">
 				</div>
 			</div>
 			<div class="row mobile">
 				<div class="col-lg-6">
-					<img src="static/img/recycle.jpg" alt="">
+					<img src="static/img/think_thank.jpeg" alt="">
 				</div>
-				<div class="col-lg-6">
-					<div class="content-title">Cpi3nsa en Movimiento</div>
+				<div class="col-lg-6 m-auto">
+					<div class="content-title"
+						style="opacity: 0.5; font-weight: 400;">
+						Cpi3nsa en Movimiento
+					</div>
 					<div class="content-body">
 						Conoce porqué esta marca ciudad será importante en la transformación de Bogotá hacia una capital 
 						consciente.
