--- a/manifiesto.html
+++ b/manifiesto.html
@@ -42,35 +42,35 @@
 	<header style="height: 20vh !important;"></header>
 	<main class="container">
 		<section class="manifesto mb-5">
-			<div class="section-title text-left mb-4">
+			<div class="w-100 text-right mb-5">
+				<img src="static/img/rocket_man.svg" style="width: 20%;">
+			</div>
+			<div class="section-title text-center mb-5" style="font-size: 2rem;">
 				Un propósito más grande que nosotros. 
 			</div>
 			<div class="content-body text-justify">
-				El mundo cambió. Y tú?
+				En Cpi3nsa creemos en algo más grande que nosotros como individuos.
 				<br>
 				<br>
-				Esto es lo que sabemos con certeza: El futuro nos habla y nosotros estamos escuchando.
+				El mundo cambió. ¿Y tú?
 				<br>
-				Cpi3nsa surge como respuesta ante un mundo que dejó de creer en sus instituciones y que busca entre los sectores de la sociedad, realizar grandes transformaciones territoriales y de desarrollo. 
+				<br>
+				Esto es lo que sabemos con certeza: El futuro nos habla y nosotros estamos escuchando. Cpi3nsa surge como respuesta ante un mundo que dejó de creer en sus instituciones y que busca entre los sectores de la sociedad, realizar grandes transformaciones territoriales. 
 				<br>
 				<br>
 				<div class="w-100 text-center">
 					<strong class="text-center">Somos un imperativo organizacional basado  en la apropiación pública del conocimiento.</strong>
 				</div>
 				<br>
-				<br>
 				<div class="w-100 text-center mb-0">
 					<strong class="text-center mb-0">Desde Cpi3nsa, todas nuestras acciones se basan en: lo ecológico, educativo y empresarial.</strong>
 				</div>
 				<br>
 				<br>
-				Cpi3nsa trae innovación y desarrollo. Venimos transformando negocios, empresas y nuestro territorio colombiano hacia un futuro sostenible de prácticas conservativas y ecológicas, donde tenemos en cuenta el fundamento de llevar los negocios, tú negocio, hacia su máximo aprovechamiento y efectividad bajo el capitalismo consciente. Bajo nuestro modelo de integración y de la mano tuya, transformaremos, junto con los gobiernos y empresas, nuestros territorios hacia las super ciudades del futuro.
+				Cpi3nsa trae innovación y desarrollo. Venimos transformando negocios, empresas y nuestro territorio colombiano hacia un futuro sostenible de prácticas conservativas y ecológicas, donde tenemos en cuenta el fundamento de llevar los negocios, tú negocio, hacia su máximo aprovechamiento y efectividad bajo el capitalismo consciente. Bajo nuestro modelo de integración y de la mano tuya, junto con los gobiernos y empresas, continuaremos llevando nuestros territorios hacia las super ciudades del futuro.
 				<br>
 				<br>
-				Creemos en un mundo que recicla, reduce, recupera y reutiliza. Creemos en una educación más consciente.
-				<br>
-				<br>
-				Juntos, queremos iniciar nuevas conversaciones. De tu mano, queremos crear nuevos modelos y nuevas formas de pensar.  Juntos podemos impulsar y conquistar el pensamiento disruptivo. Cuando el conocimiento se une no tiene quien lo pare y queremos comunicarlo a través del ejemplo. Es importante para nosotros atrevernos a pensar, a buscar romper cadenas y esclarecer el panorama, despertar. Ser autónomos y evolucionar. Para ello debemos llegar a todos los rincones del conocimiento.
+				Juntos, queremos iniciar nuevas conversaciones. De tu mano, crearemos nuevos modelos y nuevas formas de pensar.  Con dedicación y compromiso,  vamos a desafiar el status quo acerca del pensamiento pobre de la región hoy. Hablándonos unos a otros, pasando el conocimiento a las siguientes generaciones, iremos poco a poco conquistando el pensamiento disruptivo. Será fundamental atrevernos a pensar, buscando romper cadenas y esclarecer el panorama, despertar. Solo así lograremos algun dia que las regiones de latinoamérica conquisten el miedo y logren cambios y propósitos genuinos.
 				<br>
 				<br>
 				En nombre de una evolución consciente, 
