--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 					</div>
 					<div class="col-lg-6 pl-5 pr-5">
 						<div class="header-content fade-in ml-4">
-							<div class="section-title"
+							<div class="content-title"
 								style="opacity: 0.8; font-weight: 400;">
 								¡Pensamos por tí!
 							</div>
@@ -84,7 +84,7 @@
 					style="opacity: 0.8; font-weight: 400;">
 					¿Cómo Funciona?
 				</div>
-				<a href="#">— Conoce más</a>
+				<a href="/modelo_integracion.html">— Conoce más</a>
 			</div>
 			<div class="row">
 				<div class="col-lg-3">
@@ -197,8 +197,7 @@
 				</div>
 			</div>
 			<div class="projects-cta">
-				<a href="#">Conoce todos nuestros projectos</a>
-				<a href="#">Visita más proyectos</a>
+				<a href="/proyectos.html">Visita más proyectos</a>
 			</div>
 		</section>
 	</main>
